--- a/Countdown Timer/index.html
+++ b/Countdown Timer/index.html
@@ -8,23 +8,25 @@
   </head>
   <body>
     <div class="container">
-      <h1>New Year Countdown</h1>
-      <div class="timer">
-        <div class="day">
-          <h1>10</h1>
-          <h4>Days</h4>
-        </div>
-        <div class="hours">
-          <h1>10</h1>
-          <h4>Hours</h4>
-        </div>
-        <div class="minutes">
-          <h1>10</h1>
-          <h4>Minutes</h4>
-        </div>
-        <div class="seconds">
-          <h1>10</h1>
-          <h4>Minutes</h4>
+      <div class="year">
+        <h1>New Year Countdown Timer 2025</h1>
+        <div class="timer">
+          <div class="day">
+            <h2 id="day">00</h2>
+            <h4>Days</h4>
+          </div>
+          <div class="hours">
+            <h2 id="hours">00</h2>
+            <h4>Hours</h4>
+          </div>
+          <div class="minutes">
+            <h2 id="minutes">00</h2>
+            <h4>Minutes</h4>
+          </div>
+          <div class="seconds">
+            <h2 id="seconds">00</h2>
+            <h4>Seconds</h4>
+          </div>
         </div>
       </div>
     </div>
