--- a/Countdown Timer/index.html
+++ b/Countdown Timer/index.html
@@ -9,7 +9,8 @@
   <body>
     <div class="container">
       <div class="year">
-        <h1>New Year Countdown Timer 2025</h1>
+        <h5>Countdown Timer</h5>
+        <h1>New Year 2025</h1>
         <div class="timer">
           <div class="day">
             <h2 id="day">00</h2>
