--- a/Search Image/index.html
+++ b/Search Image/index.html
@@ -10,9 +10,13 @@
     <div class="container">
       <h1>Pictsearch</h1>
       <p>Explore the world, one image at a time.</p>
-      <section class="search">
-        <div class="icon-search">
-          <img src="image/icons/search-gray.svg" alt="icon-search1" />
+      <form class="searchForm">
+        <div class="boxSearch">
+          <img
+            class="icon-search"
+            src="image/icons/search-gray.svg"
+            alt="icon-search1"
+          />
           <input
             type="search"
             class="input-search"
@@ -20,24 +24,15 @@
             placeholder="Search high-resolution images"
           />
         </div>
-        <button class="btnSearch">
+        <button class="btnSearch" name="submit">
           <img src="image/icons/search-white.svg" alt="icon-search" />
         </button>
-      </section>
-      <h5 class="valueSearch">Animal</h5>
-
-      <section class="resultImage">
-        <div class="row">
-          <img class="images" src="image/imageTest.jpg" alt="imageTest" />
-          <img class="images" src="image/imageTest.jpg" alt="imageTest" />
-          <img class="images" src="image/imageTest.jpg" alt="imageTest" />
-        </div>
-        <div class="row">
-          <img class="images" src="image/imageTest.jpg" alt="imageTest" />
-          <img class="images" src="image/imageTest.jpg" alt="imageTest" />
-          <img class="images" src="image/imageTest.jpg" alt="imageTest" />
-        </div>
-      </section>
+      </form>
+      <div class="kategori">
+        <h5 class="valueSearch">Animal</h5>
+      </div>
+      <section class="resultImage"></section>
+      <button class="showMore">Show More</button>
     </div>
 
     <script src="script.js"></script>
