--- a/Papan Skor/index.html
+++ b/Papan Skor/index.html
@@ -13,16 +13,67 @@
       <h1>MPL</h1>
     </nav>
     <header>
-      <section>
+      <div class="player">
         <img src="img/skylar&cw.png" alt="skylar&cw" />
-      </section>
+        <button></button>
+      </div>
       <section>
-        <div>
+        <div class="logoMPL">
           <img src="img/logo-mpl.svg" alt="logo-mpl" />
+          <div class="bestOf">
+            <h1>Best Of</h1>
+            <select id="valueBestOf">
+              <option value="2">3</option>
+              <option value="3">5</option>
+              <option value="4">7</option>
+            </select>
+          </div>
         </div>
-        <div></div>
+        <div class="boxInput">
+          <div>
+            <img src="img/logo rrq.svg" alt="rrq" />
+            <h1>RRQ</h1>
+          </div>
+          <div class="point">
+            <h1 id="displayPoint1">0</h1>
+            <h1>VS</h1>
+            <h1 id="displayPoint2">0</h1>
+          </div>
+          <div>
+            <h1>ONIC</h1>
+            <img src="img/logo-onic.svg" alt="rrq" />
+          </div>
+        </div>
+        <div class="btnPoint">
+          <div class="btnPointLeft">
+            <button id="btnPlusLeft">+</button>
+            <button id="btnMinusLeft">-</button>
+          </div>
+          <div class="reset">
+            <button id="reset">Reset</button>
+          </div>
+          <div class="btnPointRight">
+            <button id="btnPlusRight">+</button>
+            <button id="btnMinusRight">-</button>
+          </div>
+        </div>
       </section>
     </header>
+    <div class="namePlayer">
+      <div class="logo">
+        <img src="img/logo rrq.svg" alt="rrq" />
+        <img src="img/logo-onic.svg" alt="onic" />
+      </div>
+      <div class="player1">
+        <img src="img/Gold Lane.svg" alt="gold-lane" />
+        <h1>Skaylar</h1>
+      </div>
+      <div class="player2">
+        <img src="img/Gold Lane.svg" alt="gold-lane" />
+        <h1>CW</h1>
+      </div>
+    </div>
+    <footer></footer>
     <script src="script.js"></script>
   </body>
 </html>
